--- a/src/assets/scss/global/_global.scss
+++ b/src/assets/scss/global/_global.scss
@@ -28,4 +28,5 @@ h1 {
     width: 90vw;
     max-width: 1600px;
     margin: 0 auto;
+    height: 100%;
 }
